feat(server): align server error codes to openai standard
